Fix panel label relocation after user clicks on a label.
git-svn-id: https://svn.library.cornell.edu/warburg/trunk@575 7fd527ee-9837-423d-921d-0a34619f9d71

--- a/js/tilezoom/jquery.tilezoom.css
+++ b/js/tilezoom/jquery.tilezoom.css
@@ -74,6 +74,7 @@ div.zoom-container div.zoom-hotspots a .panel-number {
 div.zoom-container div.zoom-hotspots a.active {
 	margin: 0;
 	background-color: #0088CC;
+	opacity: 1;
 }
 div.zoom-container div.zoom-navigation {
 	right: 0;
