--- a/css/panels/_base.scss
+++ b/css/panels/_base.scss
@@ -343,7 +343,7 @@ body {
    position: absolute;
    text-align: center;
    width: 40px;
-   z-index: 2;
+   z-index: 20;
 }
 
 //Carousel
@@ -536,7 +536,7 @@ body {
 			position: relative;		
 			font-weight: normal;
 			font-size: 36px;
-			background-color: #4d4e53;
+			background-color: #3f4043;
 			padding: 15px 20px;
 			margin-top: 0;
 			
