--- a/css/panels.css
+++ b/css/panels.css
@@ -5096,7 +5096,16 @@ body {
   position: absolute;
   text-align: center;
   width: 40px;
-  z-index: 20; }
+  z-index: 20;
+  width: 43px;
+  height: 13px;
+  display: inline-block; }
+
+.carousel-toggle-hide {
+  background: url("../images/panels/carousel-hide.png") no-repeat 0 0; }
+
+.carousel-toggle-show {
+  background: url("../images/panels/carousel-show.png") no-repeat 0 0; }
 
 .carousel-left-limit {
   height: 220px;
