Add panel tool bars close to panel images.
git-svn-id: https://svn.library.cornell.edu/warburg/trunk@625 7fd527ee-9837-423d-921d-0a34619f9d71

--- a/css/panels/_base.scss
+++ b/css/panels/_base.scss
@@ -695,9 +695,10 @@ body {
 	
 	nav {
 		
-		position: absolute;
-		top: 0;
-		right: 0;
+		//position: absolute;
+		//top: 0;
+		//right: 0;
+		float left;
 
 		width: 3.3333333%;
 		background-color: #303030;
