Keep the panels tool where they are for now.
git-svn-id: https://svn.library.cornell.edu/warburg/trunk@627 7fd527ee-9837-423d-921d-0a34619f9d71

--- a/css/panels.css
+++ b/css/panels.css
@@ -5314,7 +5314,9 @@ body {
       clear: both;
       width: auto; }
   .panels-display nav {
-    float: left;
+    position: absolute;
+    top: 0;
+    right: 0;
     width: 3.3333333%;
     background-color: #303030; }
     .panels-display nav #panel-tools {
