--- a/css/panels/_base.scss
+++ b/css/panels/_base.scss
@@ -695,10 +695,9 @@ body {
 	
 	nav {
 		
-		//position: absolute;
-		//top: 0;
-		//right: 0;
-		float: left;
+		position: absolute;
+		top: 0;
+		right: 0;
 
 		width: 3.3333333%;
 		background-color: #303030;
