Provide a class="enabled and a class="disabled"  for panels view mode.
git-svn-id: https://svn.library.cornell.edu/warburg/trunk@636 7fd527ee-9837-423d-921d-0a34619f9d71

--- a/css/panels/_modules.scss
+++ b/css/panels/_modules.scss
@@ -29,5 +29,15 @@
 
     background: url($pathPanelIcons + $name + '-active.png') no-repeat 0 0;
   }
+
+	a.#{$name}.enabled {
+
+    background: url($pathPanelIcons + $name + '-active.png') no-repeat 0 0;
+  }
+
+	a.#{$name}.disabled {
+
+    display: none;
+  }
 }
 
