--- a/css/panels.css
+++ b/css/panels.css
@@ -5342,6 +5342,10 @@ body {
           background: url("../images/panels/panel-nav/original-active.png") no-repeat 0 0; }
         .panels-display nav #panel-tools li a.original.active {
           background: url("../images/panels/panel-nav/original-active.png") no-repeat 0 0; }
+        .panels-display nav #panel-tools li a.original.enabled {
+          background: url("../images/panels/panel-nav/original-active.png") no-repeat 0 0; }
+        .panels-display nav #panel-tools li a.original.disabled {
+          display: none; }
         .panels-display nav #panel-tools li a.map {
           background: url("../images/panels/panel-nav/map.png") no-repeat 0 0;
           margin-top: -4px; }
@@ -5349,6 +5353,10 @@ body {
           background: url("../images/panels/panel-nav/map-active.png") no-repeat 0 0; }
         .panels-display nav #panel-tools li a.map.active {
           background: url("../images/panels/panel-nav/map-active.png") no-repeat 0 0; }
+        .panels-display nav #panel-tools li a.map.enabled {
+          background: url("../images/panels/panel-nav/map-active.png") no-repeat 0 0; }
+        .panels-display nav #panel-tools li a.map.disabled {
+          display: none; }
         .panels-display nav #panel-tools li a.pathway {
           background: url("../images/panels/panel-nav/pathway.png") no-repeat 0 0;
           margin-top: -4px; }
@@ -5356,6 +5364,10 @@ body {
           background: url("../images/panels/panel-nav/pathway-active.png") no-repeat 0 0; }
         .panels-display nav #panel-tools li a.pathway.active {
           background: url("../images/panels/panel-nav/pathway-active.png") no-repeat 0 0; }
+        .panels-display nav #panel-tools li a.pathway.enabled {
+          background: url("../images/panels/panel-nav/pathway-active.png") no-repeat 0 0; }
+        .panels-display nav #panel-tools li a.pathway.disabled {
+          display: none; }
         .panels-display nav #panel-tools li.display-tools a.go-home {
           background: url("../images/panels/panel-nav/go-home.png") no-repeat 0 0;
           margin-top: -4px; }
@@ -5363,6 +5375,10 @@ body {
           background: url("../images/panels/panel-nav/go-home-active.png") no-repeat 0 0; }
         .panels-display nav #panel-tools li.display-tools a.go-home.active {
           background: url("../images/panels/panel-nav/go-home-active.png") no-repeat 0 0; }
+        .panels-display nav #panel-tools li.display-tools a.go-home.enabled {
+          background: url("../images/panels/panel-nav/go-home-active.png") no-repeat 0 0; }
+        .panels-display nav #panel-tools li.display-tools a.go-home.disabled {
+          display: none; }
         .panels-display nav #panel-tools li.display-tools a.zoom-in {
           background: url("../images/panels/panel-nav/zoom-in.png") no-repeat 0 0;
           margin-top: -4px; }
@@ -5370,6 +5386,10 @@ body {
           background: url("../images/panels/panel-nav/zoom-in-active.png") no-repeat 0 0; }
         .panels-display nav #panel-tools li.display-tools a.zoom-in.active {
           background: url("../images/panels/panel-nav/zoom-in-active.png") no-repeat 0 0; }
+        .panels-display nav #panel-tools li.display-tools a.zoom-in.enabled {
+          background: url("../images/panels/panel-nav/zoom-in-active.png") no-repeat 0 0; }
+        .panels-display nav #panel-tools li.display-tools a.zoom-in.disabled {
+          display: none; }
         .panels-display nav #panel-tools li.display-tools a.zoom-out {
           background: url("../images/panels/panel-nav/zoom-out.png") no-repeat 0 0;
           margin-top: -4px; }
@@ -5377,6 +5397,10 @@ body {
           background: url("../images/panels/panel-nav/zoom-out-active.png") no-repeat 0 0; }
         .panels-display nav #panel-tools li.display-tools a.zoom-out.active {
           background: url("../images/panels/panel-nav/zoom-out-active.png") no-repeat 0 0; }
+        .panels-display nav #panel-tools li.display-tools a.zoom-out.enabled {
+          background: url("../images/panels/panel-nav/zoom-out-active.png") no-repeat 0 0; }
+        .panels-display nav #panel-tools li.display-tools a.zoom-out.disabled {
+          display: none; }
         .panels-display nav #panel-tools li.display-tools a.toggle-full {
           background: url("../images/panels/panel-nav/toggle-full.png") no-repeat 0 0;
           margin-top: -4px; }
@@ -5384,6 +5408,10 @@ body {
           background: url("../images/panels/panel-nav/toggle-full-active.png") no-repeat 0 0; }
         .panels-display nav #panel-tools li.display-tools a.toggle-full.active {
           background: url("../images/panels/panel-nav/toggle-full-active.png") no-repeat 0 0; }
+        .panels-display nav #panel-tools li.display-tools a.toggle-full.enabled {
+          background: url("../images/panels/panel-nav/toggle-full-active.png") no-repeat 0 0; }
+        .panels-display nav #panel-tools li.display-tools a.toggle-full.disabled {
+          display: none; }
 
 /*
 .search-panels {
