Styling individual panels description.
git-svn-id: https://svn.library.cornell.edu/warburg/trunk@639 7fd527ee-9837-423d-921d-0a34619f9d71

--- a/css/panels.css
+++ b/css/panels.css
@@ -5299,11 +5299,17 @@ body {
       margin-top: 0;
       padding-top: 6px; }
     .panels-display .panel-description h5.theme,
-    .panels-display .panel-description h5.secondary-theme {
+    .panels-display .panel-description h5.secondary-theme,
+    .panels-display .panel-description h5.panel,
+    .panels-display .panel-description h5.source,
+    .panels-display .panel-description h5.work-type {
       padding-bottom: 0;
       display: block; }
     .panels-display .panel-description h5.theme + p,
-    .panels-display .panel-description h5.secondary-theme + p {
+    .panels-display .panel-description h5.secondary-theme + p,
+    .panels-display .panel-description h5.panel,
+    .panels-display .panel-description h5.source,
+    .panels-display .panel-description h5.work-type {
       display: inline-block;
       padding: 6px 8px;
       background-color: #7a9945;
