Styling individual panels description.
git-svn-id: https://svn.library.cornell.edu/warburg/trunk@641 7fd527ee-9837-423d-921d-0a34619f9d71

--- a/css/panels.css
+++ b/css/panels.css
@@ -5304,7 +5304,8 @@ body {
     .panels-display .panel-description h5.source,
     .panels-display .panel-description h5.work-type {
       padding-bottom: 0;
-      display: block; }
+      display: block;
+      font-wight: bold; }
     .panels-display .panel-description h5.theme + p,
     .panels-display .panel-description h5.secondary-theme + p,
     .panels-display .panel-description h5.panel + p,
