Styling individual panels description.
git-svn-id: https://svn.library.cornell.edu/warburg/trunk@642 7fd527ee-9837-423d-921d-0a34619f9d71

--- a/css/panels/_base.scss
+++ b/css/panels/_base.scss
@@ -637,7 +637,9 @@ body {
 		h5.secondary-theme,
 		h5.panel,
 		h5.source,
-		h5.work-type
+		h5.work-type,
+		h5.repository,
+		h5.measurements
 		 {
 			padding-bottom: 0;
 			display: block;
@@ -648,7 +650,9 @@ body {
 		h5.secondary-theme + p,
 		h5.panel + p,
 		h5.source + p,
-		h5.work-type + p {
+		h5.work-type + p,
+		h5.repository + p,
+		h5.measurements + p {
 			display: inline-block;
 			padding: 6px 8px;
 			background-color: $green;
