--- a/css/panels.css
+++ b/css/panels.css
@@ -5302,7 +5302,9 @@ body {
     .panels-display .panel-description h5.secondary-theme,
     .panels-display .panel-description h5.panel,
     .panels-display .panel-description h5.source,
-    .panels-display .panel-description h5.work-type {
+    .panels-display .panel-description h5.work-type,
+    .panels-display .panel-description h5.repository,
+    .panels-display .panel-description h5.measurements {
       padding-bottom: 0;
       display: block;
       font-wight: bold; }
@@ -5310,7 +5312,9 @@ body {
     .panels-display .panel-description h5.secondary-theme + p,
     .panels-display .panel-description h5.panel + p,
     .panels-display .panel-description h5.source + p,
-    .panels-display .panel-description h5.work-type + p {
+    .panels-display .panel-description h5.work-type + p,
+    .panels-display .panel-description h5.repository + p,
+    .panels-display .panel-description h5.measurements + p {
       display: inline-block;
       padding: 6px 8px;
       background-color: #7a9945;
