Styling individual panels description.
git-svn-id: https://svn.library.cornell.edu/warburg/trunk@643 7fd527ee-9837-423d-921d-0a34619f9d71

--- a/css/panels.css
+++ b/css/panels.css
@@ -5313,8 +5313,21 @@ body {
     .panels-display .panel-description h5.panel + p,
     .panels-display .panel-description h5.source + p,
     .panels-display .panel-description h5.work-type + p,
-    .panels-display .panel-description h5.repository + p,
-    .panels-display .panel-description h5.measurements + p {
+    .panels-display .panel-description h5.repository + p {
+      display: inline-block;
+      padding: 6px 8px;
+      background-color: #4d4e53;
+      color: #fff;
+      text-decoration: none;
+      margin-left: 20px;
+      margin-right: 20px;
+      clear: both;
+      width: auto;
+      -moz-border-radius: 5px;
+      -webkit-border-radius: 5px;
+      -o-border-radius: 5px;
+      border-radius: 5px; }
+    .panels-display .panel-description h5.measurements + p a {
       display: inline-block;
       padding: 6px 8px;
       background-color: #7a9945;
@@ -5323,7 +5336,13 @@ body {
       margin-left: 20px;
       margin-right: 20px;
       clear: both;
-      width: auto; }
+      width: auto;
+      -moz-border-radius: 5px;
+      -webkit-border-radius: 5px;
+      -o-border-radius: 5px;
+      border-radius: 5px; }
+      .panels-display .panel-description h5.measurements + p a:hover {
+        background-color: #1faac0; }
   .panels-display nav {
     position: absolute;
     top: 0;
