--- a/css/panels/_base.scss
+++ b/css/panels/_base.scss
@@ -646,13 +646,30 @@ body {
 			font-wight: bold;
 		}
 		
+		
+		
 		h5.theme + p,
 		h5.secondary-theme + p,
 		h5.panel + p,
 		h5.source + p,
 		h5.work-type + p,
-		h5.repository + p,
-		h5.measurements + p {
+		h5.repository + p {
+			display: inline-block;
+			padding: 6px 8px;
+			background-color: #4d4e53;
+			color: #fff;
+			text-decoration: none;	
+			margin-left: 20px;
+			margin-right: 20px;
+			clear: both;
+			width: auto;
+			-moz-border-radius: 5px; 
+			-webkit-border-radius: 5px;
+			-o-border-radius: 5px;
+			border-radius: 5px;
+		}
+		
+		h5.measurements + p  a {
 			display: inline-block;
 			padding: 6px 8px;
 			background-color: $green;
@@ -662,6 +679,14 @@ body {
 			margin-right: 20px;
 			clear: both;
 			width: auto;
+			-moz-border-radius: 5px; 
+			-webkit-border-radius: 5px;
+			-o-border-radius: 5px;
+			border-radius: 5px;
+			
+			&:hover {
+				background-color: $blue;
+			}
 		}
 		
 		
