--- a/css/panels/_base.scss
+++ b/css/panels/_base.scss
@@ -669,7 +669,7 @@ body {
 			border-radius: 5px;
 		}
 		
-		h5.measurements + p  a {
+		h5.measurements  a {
 			display: inline-block;
 			padding: 6px 8px;
 			background-color: $green;
