--- a/css/panels/_base.scss
+++ b/css/panels/_base.scss
@@ -669,7 +669,7 @@ body {
 			border-radius: 5px;
 		}
 		
-		h5.measurements + p {
+		h5.measurements p {
 			display: inline-block;
 			padding: 0;
 			background-color: #4d4e53;
@@ -685,16 +685,10 @@ body {
 			border-radius: 5px;
 		}
 		
-		h5.measurements  + p a {
-			display: inline-block;
-			padding: 6px 8px;
+		h5.measurements  p a {
 			background-color: $green;
 			color: #fff;
 			text-decoration: none;	
-			-moz-border-radius: 5px; 
-			-webkit-border-radius: 5px;
-			-o-border-radius: 5px;
-			border-radius: 5px;
 			
 			&:hover {
 				background-color: $blue;
