Styling individual panels description.
git-svn-id: https://svn.library.cornell.edu/warburg/trunk@647 7fd527ee-9837-423d-921d-0a34619f9d71

--- a/css/panels.css
+++ b/css/panels.css
@@ -5330,7 +5330,7 @@ body {
     .panels-display .panel-description h5.measurements p {
       display: inline-block;
       padding: 0;
-      background-color: #4d4e53;
+      background-color: #7a9945;
       color: #fff;
       text-decoration: none;
       margin-left: 20px;
