--- a/css/panels/_base.scss
+++ b/css/panels/_base.scss
@@ -672,7 +672,7 @@ body {
 		h5.measurements p {
 			display: inline-block;
 			padding: 0;
-			background-color: #4d4e53;
+			background-color: $green;
 			color: #fff;
 			text-decoration: none;	
 			margin-left: 20px;
