--- a/css/panels/_base.scss
+++ b/css/panels/_base.scss
@@ -652,7 +652,7 @@ body {
 		h5.secondary-theme + p,
 		h5.panel + p,
 		h5.source + p,
-		h5.work-type + p,
+		h5.measurements + p,
 		h5.repository + p {
 			display: inline-block;
 			padding: 6px 8px;
@@ -669,7 +669,7 @@ body {
 			border-radius: 5px;
 		}
 		
-		h5.measurements p {
+		h5.work-type + p {
 			display: inline-block;
 			padding: 0;
 			background-color: $green;
@@ -685,7 +685,7 @@ body {
 			border-radius: 5px;
 		}
 		
-		h5.measurements  p a {
+		h5.work-type  p a {
 			background-color: $green;
 			color: #fff;
 			text-decoration: none;	
