Styling individual panels description.
git-svn-id: https://svn.library.cornell.edu/warburg/trunk@649 7fd527ee-9837-423d-921d-0a34619f9d71

--- a/css/panels.css
+++ b/css/panels.css
@@ -5344,7 +5344,8 @@ body {
     .panels-display .panel-description h5.work-type p a {
       background-color: #7a9945;
       color: #fff;
-      text-decoration: none; }
+      text-decoration: none;
+      padding: 6px 8px; }
       .panels-display .panel-description h5.work-type p a:hover {
         background-color: #1faac0; }
   .panels-display nav {
