--- a/css/panels/_base.scss
+++ b/css/panels/_base.scss
@@ -616,10 +616,14 @@ body {
 			
 			a {
 				display: inline-block;
-				padding: 4px;
+				padding: 8px 6px;
 				background-color: $green;
 				color: #fff;
 				text-decoration: none;
+				
+				&:hover {
+					background-color: $blue;
+				}
 			}
 		}	
 		
@@ -653,7 +657,8 @@ body {
 		h5.panel + p,
 		h5.source + p,
 		h5.measurements + p,
-		h5.repository + p {
+		h5.repository + p,
+		h5.work-type + p {
 			display: inline-block;
 			padding: 6px 8px;
 			background-color: #4d4e53;
@@ -669,32 +674,7 @@ body {
 			border-radius: 5px;
 		}
 		
-		h5.work-type + p {
-			display: inline-block;
-			padding: 0;
-			background-color: $green;
-			color: #fff;
-			text-decoration: none;	
-			margin-left: 20px;
-			margin-right: 20px;
-			clear: both;
-			width: auto;
-			-moz-border-radius: 5px; 
-			-webkit-border-radius: 5px;
-			-o-border-radius: 5px;
-			border-radius: 5px;
-		}
 		
-		h5.work-type  p a {
-			background-color: $green;
-			color: #fff;
-			text-decoration: none;
-			padding: 6px 8px;	
-			
-			&:hover {
-				background-color: $blue;
-			}
-		}
 		
 		
 		/*ul {
