Styling individual panels description.
git-svn-id: https://svn.library.cornell.edu/warburg/trunk@651 7fd527ee-9837-423d-921d-0a34619f9d71

--- a/css/panels/_base.scss
+++ b/css/panels/_base.scss
@@ -616,7 +616,7 @@ body {
 			
 			a {
 				display: inline-block;
-				padding: 8px 6px;
+				//padding: 8px 6px;
 				background-color: $green;
 				color: #fff;
 				text-decoration: none;
@@ -673,8 +673,6 @@ body {
 			-o-border-radius: 5px;
 			border-radius: 5px;
 		}
-		
-		
 		
 		
 		/*ul {
