--- a/css/panels/_base.scss
+++ b/css/panels/_base.scss
@@ -616,10 +616,14 @@ body {
 			
 			a {
 				display: inline-block;
-				//padding: 8px 6px;
+				padding: 8px 6px;
 				background-color: $green;
 				color: #fff;
 				text-decoration: none;
+				-moz-border-radius: 5px; 
+				-webkit-border-radius: 5px;
+				-o-border-radius: 5px;
+				border-radius: 5px;
 				
 				&:hover {
 					background-color: $blue;
@@ -652,13 +656,13 @@ body {
 		
 		
 		
-		h5.theme + p,
-		h5.secondary-theme + p,
-		h5.panel + p,
-		h5.source + p,
-		h5.measurements + p,
-		h5.repository + p,
-		h5.work-type + p {
+		h5.theme p,
+		h5.secondary-theme p,
+		h5.panel p,
+		h5.source  p,
+		h5.measurements p,
+		h5.repository  p,
+		h5.work-type p {
 			display: inline-block;
 			padding: 6px 8px;
 			background-color: #4d4e53;
