Styling individual panels description.
git-svn-id: https://svn.library.cornell.edu/warburg/trunk@653 7fd527ee-9837-423d-921d-0a34619f9d71

--- a/css/panels/_base.scss
+++ b/css/panels/_base.scss
@@ -656,13 +656,13 @@ body {
 		
 		
 		
-		h5.theme p,
-		h5.secondary-theme p,
-		h5.panel p,
-		h5.source  p,
-		h5.measurements p,
-		h5.repository  p,
-		h5.work-type p {
+		h5.theme + p,
+		h5.secondary-theme + p,
+		h5.panel + p,
+		h5.source  + p,
+		h5.measurements + p,
+		h5.repository + p,
+		h5.work-type + p {
 			display: inline-block;
 			padding: 6px 8px;
 			background-color: #4d4e53;
