--- a/css/panels.css
+++ b/css/panels.css
@@ -5314,13 +5314,13 @@ body {
       padding-bottom: 0;
       display: block;
       font-wight: bold; }
-    .panels-display .panel-description h5.theme p,
-    .panels-display .panel-description h5.secondary-theme p,
-    .panels-display .panel-description h5.panel p,
-    .panels-display .panel-description h5.source p,
-    .panels-display .panel-description h5.measurements p,
-    .panels-display .panel-description h5.repository p,
-    .panels-display .panel-description h5.work-type p {
+    .panels-display .panel-description h5.theme + p,
+    .panels-display .panel-description h5.secondary-theme + p,
+    .panels-display .panel-description h5.panel + p,
+    .panels-display .panel-description h5.source + p,
+    .panels-display .panel-description h5.measurements + p,
+    .panels-display .panel-description h5.repository + p,
+    .panels-display .panel-description h5.work-type + p {
       display: inline-block;
       padding: 6px 8px;
       background-color: #4d4e53;
