--- a/css/panels.css
+++ b/css/panels.css
@@ -5334,6 +5334,24 @@ body {
       -webkit-border-radius: 5px;
       -o-border-radius: 5px;
       border-radius: 5px; }
+    .panels-display .panel-description h5.work-type p.work-type {
+      display: inline-block;
+      padding: 0;
+      background-color: #7a9945;
+      color: #fff;
+      text-decoration: none;
+      margin-left: 20px;
+      margin-right: 20px;
+      clear: both;
+      width: auto;
+      -moz-border-radius: 5px;
+      -webkit-border-radius: 5px;
+      -o-border-radius: 5px;
+      border-radius: 5px; }
+      .panels-display .panel-description h5.work-type p.work-type a {
+        display: inline-block;
+        padding: 6px 8px;
+        background-color: #7a9945; }
   .panels-display nav {
     position: absolute;
     top: 0;
