--- a/css/panels/_base.scss
+++ b/css/panels/_base.scss
@@ -678,6 +678,32 @@ body {
 			border-radius: 5px;
 		}
 		
+		h5.work-type p.work-type {
+			display: inline-block;
+			padding: 0;
+			background-color: $green;
+			color: #fff;
+			text-decoration: none;	
+			margin-left: 20px;
+			margin-right: 20px;
+			clear: both;
+			width: auto;
+			-moz-border-radius: 5px; 
+			-webkit-border-radius: 5px;
+			-o-border-radius: 5px;
+			border-radius: 5px;
+			
+			a {
+				display: inline-block;
+				padding: 6px 8px;
+				background-color: $green;
+
+			}
+		}
+		
+
+		
+		
 		
 		/*ul {
 			float: left;
