Styling individual panels description.
git-svn-id: https://svn.library.cornell.edu/warburg/trunk@655 7fd527ee-9837-423d-921d-0a34619f9d71

--- a/css/panels.css
+++ b/css/panels.css
@@ -5319,8 +5319,7 @@ body {
     .panels-display .panel-description h5.panel + p,
     .panels-display .panel-description h5.source + p,
     .panels-display .panel-description h5.measurements + p,
-    .panels-display .panel-description h5.repository + p,
-    .panels-display .panel-description h5.work-type + p {
+    .panels-display .panel-description h5.repository + p {
       display: inline-block;
       padding: 6px 8px;
       background-color: #4d4e53;
