--- a/css/panels/_base.scss
+++ b/css/panels/_base.scss
@@ -661,8 +661,7 @@ body {
 		h5.panel + p,
 		h5.source  + p,
 		h5.measurements + p,
-		h5.repository + p,
-		h5.work-type + p {
+		h5.repository + p {
 			display: inline-block;
 			padding: 6px 8px;
 			background-color: #4d4e53;
