--- a/css/panels.css
+++ b/css/panels.css
@@ -5342,11 +5342,7 @@ body {
       margin-left: 20px;
       margin-right: 20px;
       clear: both;
-      width: auto;
-      -moz-border-radius: 5px;
-      -webkit-border-radius: 5px;
-      -o-border-radius: 5px;
-      border-radius: 5px; }
+      width: auto; }
       .panels-display .panel-description h5.work-type p.work-type a {
         display: inline-block;
         padding: 6px 8px;
