Styling individual panels description.
git-svn-id: https://svn.library.cornell.edu/warburg/trunk@657 7fd527ee-9837-423d-921d-0a34619f9d71

--- a/css/panels.css
+++ b/css/panels.css
@@ -5289,11 +5289,7 @@ body {
         padding: 8px 6px;
         background-color: #7a9945;
         color: #fff;
-        text-decoration: none;
-        -moz-border-radius: 5px;
-        -webkit-border-radius: 5px;
-        -o-border-radius: 5px;
-        border-radius: 5px; }
+        text-decoration: none; }
         .panels-display .panel-description p a:hover {
           background-color: #1faac0; }
     .panels-display .panel-description h5 {
