add opacity to left and right carousel UI control.
git-svn-id: https://svn.library.cornell.edu/warburg/trunk@661 7fd527ee-9837-423d-921d-0a34619f9d71

--- a/css/panels/_base.scss
+++ b/css/panels/_base.scss
@@ -369,6 +369,7 @@ body {
 	position: absolute;
 	top: 49px;
 	left: 0;
+	@include opacity(.8);
 }
 
 .carousel-right-limit {
@@ -380,6 +381,7 @@ body {
 	position: absolute;
 	top: 45px;
 	right: 0;
+	@include opacity(.8);
 }
 
 .rs-carousel {
