--- a/css/panels.css
+++ b/css/panels.css
@@ -5113,7 +5113,9 @@ body {
   background-color: white;
   position: absolute;
   top: 49px;
-  left: 0; }
+  left: 0;
+  filter: alpha(opacity=80);
+  opacity: 0.8; }
 
 .carousel-right-limit {
   height: 220px;
@@ -5121,7 +5123,9 @@ body {
   background-color: white;
   position: absolute;
   top: 45px;
-  right: 0; }
+  right: 0;
+  filter: alpha(opacity=80);
+  opacity: 0.8; }
 
 .rs-carousel ul {
   height: 205px;
