Remove left margin for carousel.
git-svn-id: https://svn.library.cornell.edu/warburg/trunk@662 7fd527ee-9837-423d-921d-0a34619f9d71

--- a/css/panels/_base.scss
+++ b/css/panels/_base.scss
@@ -400,7 +400,7 @@ body {
 			margin-right: 0;
 			
 			&:first-child {
-				margin-left: 75px;
+				//margin-left: 75px;
 				//margin-left: 0;
 			}
 
