--- a/css/content/_miscellaneous.scss
+++ b/css/content/_miscellaneous.scss
@@ -22,3 +22,35 @@ p.caption {
 	width: 100%;
 	padding: 5px 10px ;
 	font-size: 1.625em; }
+	
+	
+
+  /* Search pages */
+  /*------------------------------*/	
+
+  .page-search {
+    label {
+      font-size: 1.5em;
+    }
+
+    .form-submit {
+
+      background-color: #83B63D;
+        color: white;
+        font-size: 2em;
+        padding: 10px;
+
+    }
+
+    .content {
+
+      h2 {
+        display: inline-block;
+        background: none repeat scroll 0 0 #595959;
+        color: white;
+        font-size: 1.625em;
+        margin-bottom: 1em;
+        padding: 5px 10px;
+      }
+    }
+  }
