--- a/css/content.css
+++ b/css/content.css
@@ -6257,6 +6257,23 @@ p.caption {
   padding: 5px 10px;
   font-size: 1.625em; }
 
+/* Search pages */
+/*------------------------------*/
+.page-search label {
+  font-size: 1.5em; }
+.page-search .form-submit {
+  background-color: #83B63D;
+  color: white;
+  font-size: 2em;
+  padding: 10px; }
+.page-search .content h2 {
+  display: inline-block;
+  background: none repeat scroll 0 0 #595959;
+  color: white;
+  font-size: 1.625em;
+  margin-bottom: 1em;
+  padding: 5px 10px; }
+
 @media (min-width: 980px) and (max-width: 1199px) {
   .navbar .container {
     width: 940px; }
