--- a/css/content.css
+++ b/css/content.css
@@ -6261,17 +6261,23 @@ p.caption {
 /*------------------------------*/
 .page-search label {
   font-size: 1.5em; }
+.page-search .form-text {
+  -o-border-radius: 0;
+  -moz-border-radius: 0;
+  -webkit-border-radius: 0;
+  border-radius: 0; }
 .page-search .form-submit {
   background-color: #83B63D;
   color: white;
-  font-size: 2em;
-  padding: 10px; }
+  font-size: 1em;
+  padding: 5px;
+  font-family: 'Abel', sans-serif;
+  font-weight: normal;
+  border: none; }
 .page-search .content h2 {
-  display: inline-block;
   background: none repeat scroll 0 0 #595959;
   color: white;
   font-size: 1.625em;
-  margin-bottom: 1em;
   padding: 5px 10px; }
 
 @media (min-width: 980px) and (max-width: 1199px) {
