Styling search pages.
git-svn-id: https://svn.library.cornell.edu/warburg/trunk@667 7fd527ee-9837-423d-921d-0a34619f9d71

--- a/css/content.css
+++ b/css/content.css
@@ -6274,6 +6274,8 @@ p.caption {
   font-family: 'Abel', sans-serif;
   font-weight: normal;
   border: none; }
+  .page-search .form-submit:hover {
+    background-color: #005580; }
 .page-search .content h2 {
   background: none repeat scroll 0 0 #595959;
   color: white;
