--- a/css/content.css
+++ b/css/content.css
@@ -6273,14 +6273,15 @@ p.caption {
   padding: 5px;
   font-family: 'Abel', sans-serif;
   font-weight: normal;
-  border: none; }
+  border: none;
+  margin-top: -10px; }
   .page-search .form-submit:hover {
     background-color: #005580; }
 .page-search .content h2 {
   background: none repeat scroll 0 0 #595959;
   color: white;
   font-size: 1.625em;
-  padding: 5px 10px; }
+  padding: 8px 13px; }
 
 @media (min-width: 980px) and (max-width: 1199px) {
   .navbar .container {
