--- a/css/content/_miscellaneous.scss
+++ b/css/content/_miscellaneous.scss
@@ -52,6 +52,7 @@ p.caption {
     font-family: 'Abel', sans-serif;
   	font-weight: normal;
   	border: none;
+  	margin-top: -10px;
   	
   	&:hover {
   	  
@@ -66,7 +67,7 @@ p.caption {
       background: none repeat scroll 0 0 #595959;
       color: white;
       font-size: 1.625em;
-      padding: 5px 10px;
+      padding: 8px 13px;
     }
   }
 }
