--- a/css/content/_layout.scss
+++ b/css/content/_layout.scss
@@ -7,93 +7,82 @@
 }
 
 /* Search Box */
+
 a.search-panels {
-				z-index: 99999;
-				display: block;
-				position: absolute;
-				top: 0;
-				right: 0;
+  z-index: 99999;
+  display: block;
+  position: absolute;
+  top: 0;
+  right: 0;
+  float: right;
+  padding: 0;
 
-				float: right;
+  span:after {
+    border-top-color: none;
+    border: none;
+  }
+  
+  &:hover {
+    background-color: transparent;
+    @include opacity(.5);
+  }
 
-
-					padding: 0;
-
-					span:after
-					{
-
-						border-top-color: none;
-						border: none;
-
-					}
-
-					&:hover {
-						background-color: transparent;
-						@include opacity(.5);
-					}
-
-					.search-panels-icon {
-						
-						background: url('../images/panels/search-icon.png') no-repeat 0 0;
-					
-					
-						//background-image: url($pathSprites);
-						//background-position: 0 0;
-						width: 28px;
-						height: 26px;
-						display: inline-block;
-						margin-top: 9px;
-						margin-right: 5px;
-					}
-					
-					.search-panels-close-icon {
-						
-						background: url('../images/panels/hide-search-icon.png') no-repeat 0 0;
-					
-					
-						//background-image: url($pathSprites);
-						//background-position: 0 0;
-						width: 28px;
-						height: 26px;
-						display: inline-block;
-						margin-top: 9px;
-						margin-right: 5px;
-					}
-				}
-												
-		#search-panels {
-			z-index: 99999;
-			display: block;
-			position: absolute;
-			top: 0;
-			right: 45px;
-			display: none;
-			
-			input[type="text"] {
-				margin-top: 10px;
-				border-radius: 0;
-				height: 16px;
-				background-color: $grayLighter;
-				border: 1px solid $grayLight;
-				color: $white;
-				width: 140px;
-				margin-left: 20px;
-			}
-			
-			input[type="submit"] {
-				color: $white;
-				background-color: $blue;
-				font-family: 'Abel', sans-serif;
-				font-weight: normal;
-				border-radius: 0;
-				height: 26px;
-				border: none;
-				font-size: 16px;
-				padding-left: 10px;
-				padding-right: 10px;
-			}
-			
-		}
+	.search-panels-icon {
+    background: url('../images/panels/search-icon.png') no-repeat 0 0;
+    //background-image: url($pathSprites);
+		//background-position: 0 0;
+		width: 28px;
+		height: 26px;
+		display: inline-block;
+		margin-top: 9px;
+		margin-right: 5px;
+	}
+	
+	.search-panels-close-icon {
+    background: url('../images/panels/hide-search-icon.png') no-repeat 0 0;
+    //background-image: url($pathSprites);
+		//background-position: 0 0;
+		width: 28px;
+		height: 26px;
+		display: inline-block;
+		margin-top: 9px;
+		margin-right: 5px;
+	}
+}
+										
+#search-panels {
+	z-index: 99999;
+	display: block;
+	position: absolute;
+	top: 0;
+	right: 45px;
+	display: none;
+	
+	input[type="text"] {
+		margin-top: 10px;
+		border-radius: 0;
+		height: 16px;
+		background-color: $grayLighter;
+		border: 1px solid $grayLight;
+		color: $white;
+		width: 140px;
+		margin-left: 20px;
+	}
+	
+	input[type="submit"] {
+		color: $white;
+		background-color: $blue;
+		font-family: 'Abel', sans-serif;
+		font-weight: normal;
+		border-radius: 0;
+		height: 26px;
+		border: none;
+		font-size: 16px;
+		padding-left: 10px;
+		padding-right: 10px;
+	}
+}
+		
 /* Header on sub pages */
 /*------------------------------*/
 header {
