Adding search form to content pages.
git-svn-id: https://svn.library.cornell.edu/warburg/trunk@673 7fd527ee-9837-423d-921d-0a34619f9d71

--- a/css/content.css
+++ b/css/content.css
@@ -5974,8 +5974,7 @@ a.search-panels {
     border: none; }
   a.search-panels:hover {
     background-color: transparent;
-    opacity: 0.005;
-    filter: alpha(opacity=0.5); }
+    opacity: .5; }
   a.search-panels .search-panels-icon {
     background: url("../images/panels/search-icon.png") no-repeat 0 0;
     width: 28px;
