--- a/css/content.css
+++ b/css/content.css
@@ -5956,7 +5956,8 @@ img.pull-right {
 /*------------------------------*/
 .institution-brand {
   background: #4d4e53;
-  padding: 12px 0; }
+  padding: 12px 0;
+  position: relative; }
   .institution-brand a {
     color: #fefefe; }
 
