Toggle logo english/ logo phonetic.
git-svn-id: https://svn.library.cornell.edu/warburg/trunk@685 7fd527ee-9837-423d-921d-0a34619f9d71

--- a/css/content.css
+++ b/css/content.css
@@ -5919,17 +5919,10 @@ img.pull-right {
   margin-bottom: 0; }
   .navbar .container {
     width: 1170px; }
-  .navbar .brand {
-    float: none;
-    font-size: 3.875em;
-    color: #403e3c;
-    font-family: 'WalkwaySemiBoldRegular';
-    text-shadow: 0 0 0; }
-  .navbar .subtitle {
-    color: #869c4f;
-    font-size: 1.125em;
-    font-family: 'WalkwayBoldRegular';
-    margin-top: 15px; }
+  .navbar .logo a {
+    display: inline-block;
+    max-width: 100%;
+    background: url("../images/mnemosyne-logo.png") no-repeat 0 0; }
   .navbar .nav {
     float: right; }
     .navbar .nav li {
