Toggle logo english/ logo phonetic.
git-svn-id: https://svn.library.cornell.edu/warburg/trunk@687 7fd527ee-9837-423d-921d-0a34619f9d71

--- a/css/content.css
+++ b/css/content.css
@@ -5923,6 +5923,9 @@ img.pull-right {
     display: inline-block;
     max-width: 100%;
     background: url("../images/mnemosyne-logo.png") no-repeat 0 0; }
+    .navbar .logo a .displace {
+      left: -9999px;
+      position: absolute; }
   .navbar .nav {
     float: right; }
     .navbar .nav li {
