--- a/css/content/_navigation.scss
+++ b/css/content/_navigation.scss
@@ -14,6 +14,11 @@
 		  max-width: 100%;
 		  background: url('../images/mnemosyne-logo.png') no-repeat 0 0;
 		  
+		  .displace {
+		    left: -9999px;
+		    position: absolute;
+		  }
+		  
 	  }
 	}
 	
