Toggle logo english/ logo phonetic.
git-svn-id: https://svn.library.cornell.edu/warburg/trunk@690 7fd527ee-9837-423d-921d-0a34619f9d71

--- a/css/content/_navigation.scss
+++ b/css/content/_navigation.scss
@@ -14,13 +14,14 @@
 		  max-width: 100%;
 		  background: url('../images/mnemosyne-logo.png') no-repeat 0 0;
 		  
-		  span.displace {
-		    left: -9999px;
-		    position: absolute;
-		  }
-		  
+		  span {
+		    .displace {
+		        left: -9999px;
+		        position: absolute;
+		      }
+		    }		  
+	    }
 	  }
-	}
 	
 	
 	
