--- a/css/content/_navigation.scss
+++ b/css/content/_navigation.scss
@@ -8,18 +8,18 @@
 	
 	
 	.logo {
+	  position: relative;
 	
 	  a {
 		  display: inline-block;
 		  max-width: 100%;
 		  background: url('../images/mnemosyne-logo.png') no-repeat 0 0;
 		  
-		  span {
-		    .displace {
-		        left: -9999px;
-		        position: absolute;
-		      }
-		    }		  
+		  
+	    .displace {
+	        left: -9999px;
+	        position: absolute;
+	      }	    		  
 	    }
 	  }
 	
