--- a/css/content/_navigation.scss
+++ b/css/content/_navigation.scss
@@ -13,7 +13,13 @@
 	  a {
 		  display: inline-block;
 		  max-width: 100%;
-		  background: url('../images/mnemosyne-logo.png') no-repeat 0 0;   		  
+		  background: url('../images/mnemosyne-logo.png') no-repeat 0 0;
+		  
+		  
+	    .displace {
+	        left: -9999px;
+	        position: absolute;
+	      }		  
 	    }
 	  }
 	
