Toggle logo english/ logo phonetic.
git-svn-id: https://svn.library.cornell.edu/warburg/trunk@694 7fd527ee-9837-423d-921d-0a34619f9d71

--- a/css/content.css
+++ b/css/content.css
@@ -5923,7 +5923,8 @@ img.pull-right {
     position: relative; }
     .navbar .logo a {
       display: inline-block;
-      max-width: 100%;
+      width: 100%;
+      max-width: 377px;
       background: url("../images/mnemosyne-logo.png") no-repeat 0 0; }
       .navbar .logo a .displace {
         left: -9999px;
