--- a/css/content/_navigation.scss
+++ b/css/content/_navigation.scss
@@ -12,7 +12,8 @@
 	
 	  a {
 		  display: inline-block;
-		  max-width: 100%;
+		  width: 100%;
+      max-width: 377px;
 		  background: url('../images/mnemosyne-logo.png') no-repeat 0 0;
 		  
 		  
