--- a/css/content.css
+++ b/css/content.css
@@ -5924,6 +5924,7 @@ img.pull-right {
     .navbar .logo a {
       display: inline-block;
       width: 100%;
+      height: 88px;
       max-width: 377px;
       background: url("../images/mnemosyne-logo.png") no-repeat 0 0; }
       .navbar .logo a .displace {
