--- a/css/content/_navigation.scss
+++ b/css/content/_navigation.scss
@@ -13,6 +13,7 @@
 	  a {
 		  display: inline-block;
 		  width: 100%;
+		  height: 88px;
       max-width: 377px;
 		  background: url('../images/mnemosyne-logo.png') no-repeat 0 0;
 		  
