--- a/css/content.css
+++ b/css/content.css
@@ -5925,8 +5925,10 @@ img.pull-right {
       display: inline-block;
       width: 100%;
       height: 88px;
-      max-width: 377px;
       background: url("../images/mnemosyne-logo.png") no-repeat 0 0; }
+      .navbar .logo a:hover {
+        opacity: .8;
+        background: url("../images/mnemosyne-phonetics-logo.png") no-repeat 0 0; }
       .navbar .logo a .displace {
         left: -9999px;
         position: absolute; }
