--- a/css/content/_navigation.scss
+++ b/css/content/_navigation.scss
@@ -14,10 +14,20 @@
 		  display: inline-block;
 		  width: 100%;
 		  height: 88px;
-      max-width: 377px;
 		  background: url('../images/mnemosyne-logo.png') no-repeat 0 0;
 		  
-		  
+		  &:hover {
+		    opacity: .8;
+		    background: url('../images/mnemosyne-phonetics-logo.png') no-repeat 0 0;
+		    
+		  }
+      
+      &.phonetic {
+      
+      }
+		   
+		    
+      
 	    .displace {
 	        left: -9999px;
 	        position: absolute;
