Toggle logo english/ logo phonetic.
git-svn-id: https://svn.library.cornell.edu/warburg/trunk@697 7fd527ee-9837-423d-921d-0a34619f9d71

--- a/css/content.css
+++ b/css/content.css
@@ -5932,6 +5932,10 @@ img.pull-right {
       .navbar .logo a .displace {
         left: -9999px;
         position: absolute; }
+    .navbar .logo .toggle-logo {
+      position: absolute;
+      top: 0;
+      right: 0; }
   .navbar .nav {
     float: right; }
     .navbar .nav li {
