--- a/css/content/_navigation.scss
+++ b/css/content/_navigation.scss
@@ -26,12 +26,16 @@
       
       }
 		   
-		    
-      
 	    .displace {
 	        left: -9999px;
 	        position: absolute;
 	      }		  
+	    }
+	    
+	    .toggle-logo {
+	      position: absolute;
+	      top: 0;
+	      right: 0;
 	    }
 	  }
 	
