--- a/css/content.css
+++ b/css/content.css
@@ -5931,7 +5931,8 @@ img.pull-right {
         background: url("../images/mnemosyne-phonetics-logo.png") no-repeat 0 0; }
       .navbar .logo a .displace {
         left: -9999px;
-        position: absolute; }
+        position: absolute;
+        background: url("../images/logo-toggle.png") no-repeat 0 0; }
     .navbar .logo .toggle-logo {
       position: absolute;
       top: 0;
