--- a/css/content/_navigation.scss
+++ b/css/content/_navigation.scss
@@ -29,6 +29,7 @@
 	    .displace {
 	        left: -9999px;
 	        position: absolute;
+	        background: url('../images/logo-toggle.png') no-repeat 0 0;
 	      }		  
 	    }
 	    
