Toggle logo english/ logo phonetic.
git-svn-id: https://svn.library.cornell.edu/warburg/trunk@699 7fd527ee-9837-423d-921d-0a34619f9d71

--- a/css/content.css
+++ b/css/content.css
@@ -5934,9 +5934,12 @@ img.pull-right {
         position: absolute;
         background: url("../images/logo-toggle.png") no-repeat 0 0; }
     .navbar .logo .toggle-logo {
+      display: block;
       position: absolute;
       top: 0;
-      right: 0; }
+      right: 0;
+      width: 26px;
+      height: 28px; }
   .navbar .nav {
     float: right; }
     .navbar .nav li {
