--- a/css/content/_navigation.scss
+++ b/css/content/_navigation.scss
@@ -34,9 +34,12 @@
 	    }
 	    
 	    .toggle-logo {
+	      display: block;
 	      position: absolute;
 	      top: 0;
 	      right: 0;
+	      width: 26px;
+	      height: 28px;
 	    }
 	  }
 	
