Toggle logo english/ logo phonetic.
git-svn-id: https://svn.library.cornell.edu/warburg/trunk@700 7fd527ee-9837-423d-921d-0a34619f9d71

--- a/css/content.css
+++ b/css/content.css
@@ -5931,15 +5931,15 @@ img.pull-right {
         background: url("../images/mnemosyne-phonetics-logo.png") no-repeat 0 0; }
       .navbar .logo a .displace {
         left: -9999px;
-        position: absolute;
-        background: url("../images/logo-toggle.png") no-repeat 0 0; }
+        position: absolute; }
     .navbar .logo .toggle-logo {
       display: block;
       position: absolute;
       top: 0;
       right: 0;
       width: 26px;
-      height: 28px; }
+      height: 28px;
+      background: url("../images/logo-toggle.png") no-repeat 0 0; }
   .navbar .nav {
     float: right; }
     .navbar .nav li {
