Toggle logo english/ logo phonetic.
git-svn-id: https://svn.library.cornell.edu/warburg/trunk@707 7fd527ee-9837-423d-921d-0a34619f9d71

--- a/css/content/_navigation.scss
+++ b/css/content/_navigation.scss
@@ -35,7 +35,7 @@
 	      display: block;
 	      position: absolute;
 	      top: 0;
-	      right: 0;
+	      right: -10px;
 	      width: 28px;
 	      height: 27px;
 	      background: url('../images/logo-toggle.png') no-repeat 0 0;
