--- a/css/content.css
+++ b/css/content.css
@@ -5937,7 +5937,7 @@ img.pull-right {
       display: block;
       position: absolute;
       top: 0;
-      right: 0;
+      right: -10px;
       width: 28px;
       height: 27px;
       background: url("../images/logo-toggle.png") no-repeat 0 0;
