style search form on content pages.
git-svn-id: https://svn.library.cornell.edu/warburg/trunk@714 7fd527ee-9837-423d-921d-0a34619f9d71

--- a/css/content/_layout.scss
+++ b/css/content/_layout.scss
@@ -68,11 +68,12 @@ a.search-panels {
 		color: $white;
 		width: 140px;
 		margin-left: 20px;
+		color: #fff;
 	}
 	
 	input[type="submit"] {
 		color: $white;
-		background-color: $blue;
+		background-color: #83B63D;
 		font-family: 'Abel', sans-serif;
 		font-weight: normal;
 		border-radius: 0;
