style search form on content pages.
git-svn-id: https://svn.library.cornell.edu/warburg/trunk@715 7fd527ee-9837-423d-921d-0a34619f9d71

--- a/css/content.css
+++ b/css/content.css
@@ -6028,10 +6028,11 @@ a.search-panels {
     border: 1px solid #999999;
     color: white;
     width: 140px;
-    margin-left: 20px; }
+    margin-left: 20px;
+    color: #fff; }
   #search-panels input[type="submit"] {
     color: white;
-    background-color: #049cdb;
+    background-color: #83B63D;
     font-family: 'Abel', sans-serif;
     font-weight: normal;
     border-radius: 0;
