style search form on content pages.
git-svn-id: https://svn.library.cornell.edu/warburg/trunk@716 7fd527ee-9837-423d-921d-0a34619f9d71

--- a/css/content.css
+++ b/css/content.css
@@ -6029,7 +6029,7 @@ a.search-panels {
     color: white;
     width: 140px;
     margin-left: 20px;
-    color: #fff; }
+    color: #000; }
   #search-panels input[type="submit"] {
     color: white;
     background-color: #83B63D;
