--- a/css/content/_layout.scss
+++ b/css/content/_layout.scss
@@ -66,7 +66,7 @@ a.search-panels {
 		color: $white;
 		width: 140px;
 		margin-left: 20px;
-		color: #fff;
+		color: #000;
 	}
 	
 	input[type="submit"] {
