--- a/css/content.css
+++ b/css/content.css
@@ -5919,21 +5919,21 @@ img.pull-right {
   margin-bottom: 0; }
   .navbar .container {
     width: 1170px; }
-  .navbar .logo {
+  .navbar .logo h1 {
     position: relative; }
-    .navbar .logo a {
+    .navbar .logo h1 a {
       display: inline-block;
       width: 100%;
       height: 88px;
       background: url("../images/mnemosyne-logo.png") no-repeat 0 0; }
-      .navbar .logo a:hover {
+      .navbar .logo h1 a:hover {
         background: url("../images/mnemosyne-phonetics-logo.png") no-repeat 0 0; }
-      .navbar .logo a.phonetic {
+      .navbar .logo h1 a.phonetic {
         background: url("../images/mnemosyne-phonetics-logo.png") no-repeat 0 0; }
-      .navbar .logo a .displace {
+      .navbar .logo h1 a .displace {
         left: -9999px;
         position: absolute; }
-    .navbar .logo .toggle-logo {
+    .navbar .logo h1 a.toggle-logo {
       display: block;
       position: absolute;
       top: 0;
@@ -5945,7 +5945,7 @@ img.pull-right {
       -webkit-transition: all .5s ease;
       -o-transition: all .5s ease;
       transition: all .5s ease; }
-      .navbar .logo .toggle-logo:hover {
+      .navbar .logo h1 a.toggle-logo:hover {
         opacity: .5;
         -moz-transform: rotate(90deg);
         -webkit-transform: rotate(90deg);
